--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "cordova": {
     "id": "cordova-custom-notification-sound",
     "platforms": [
-      "android",
+      "android"
     ]
   },
   "description": "cordova-custom-notification-sound"
