--- a/plugin.xml
+++ b/plugin.xml
@@ -11,5 +11,9 @@
         <resource-file src="beep.wav" target="res/beep2.wav" />
         <resource-file src="beep.wav" target="beeppp.wav" />
     </platform>
+    <platform name="ios">
+        <resource-file src="beep.wav" target="Resources/beep.wav" />
+        <resource-file src="beep.caf" target="Resources/beep.caf" />
+    </platform>
 
 </plugin>
